--- a/deno.json
+++ b/deno.json
@@ -1,8 +1,8 @@
 {
   "package": {
-    "name": "es-package",
-    "description": "A template for creating and publishing an ES module",
-    "github": "semicognitive/es-package"
+    "name": "thefuz",
+    "description": "Using GPT-3 as a back-end, but with Svelte.",
+    "github": "semicognitive/thefuz"
   },
   "tasks": {
     "test": "deno test --lock-write --allow-all --parallel test/",
