--- a/deno.json
+++ b/deno.json
@@ -10,6 +10,8 @@
   },
   "importMap": "import-map.json",
   "compilerOptions": {
+    "target": "esnext",
+    "lib": ["dom", "dom.iterable", "dom.asynciterable", "deno.ns"],
     "strict": true
   },
   "fmt": {
